add Math Module

--- a/Lesson13_Modulos_y_Colecciones/Math/Math_Module.ipynb
+++ b/Lesson13_Modulos_y_Colecciones/Math/Math_Module.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33364aeb",
+   "id": "d43f5650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "68c9bb72",
+   "id": "301e0623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3043855b",
+   "id": "9116b234",
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +47,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "a386221b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Gracias al modulo math, podemos forzar redondeos a la alta o a la baja.\n",
+    "# Queremos redondear pi a la baja\n",
+    "math.floor(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1bd7c406",
+   "id": "45f85e3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gracias al modulo math, podemos forzar redondeos a la alta o a la baja."
+    "# Redondear hacia la a"
    ]
   }
  ],
