--- a/Lesson13_Modulos_y_Colecciones/Math/Math_Module.ipynb
+++ b/Lesson13_Modulos_y_Colecciones/Math/Math_Module.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d43f5650",
+   "execution_count": 3,
+   "id": "1cb2109d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "301e0623",
+   "execution_count": 4,
+   "id": "9229b79c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,30 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9116b234",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Redondear pi, si el numero es menor que 5 redondea a la baja.\n",
-    "round(pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "a386221b",
+   "id": "f09a4b48",
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +41,28 @@
     }
    ],
    "source": [
+    "# Redondear pi, si el numero es menor que 5 redondea a la baja.\n",
+    "round(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "770a2be5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Gracias al modulo math, podemos forzar redondeos a la alta o a la baja.\n",
     "# Queremos redondear pi a la baja\n",
     "math.floor(pi)"
@@ -70,13 +70,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "8a1cc98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Redondear hacia la alza\n",
+    "math.ceil(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "defce3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Valor absolto, es la distancia del numero al cero\n",
+    "abs(-10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4ab5ebc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c1a60454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sumatorio, suma todos los numeros de la lista\n",
+    "n = [1,2,3]\n",
+    "sum(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4c51810f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# math.fsum()\n",
+    "math.fsum(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2cfa224c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.99999999"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2 = [0.99999999, 1, 2, 3]\n",
+    "math.fsum(n2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1b1a22d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Metodo de truncamiento. Elimina la parte decimal y coloca un entero siempre.\n",
+    "n3 = 100.122323232\n",
+    "math.trunc(n3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9c2745c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Potencias\n",
+    "math.pow(2,3) # Dos elevado a la Tres\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a936de81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Raíz cuadrada.\n",
+    "math.sqrt(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a5354d6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Constantes\n",
+    "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4a7e2a99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Constante\n",
+    "math.e"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "45f85e3f",
+   "id": "24c45d04",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Redondear hacia la a"
-   ]
+   "source": []
   }
  ],
  "metadata": {
